fix exhibit builder outline on IE7

--- a/public/stylesheets/my9s.css
+++ b/public/stylesheets/my9s.css
@@ -107,10 +107,12 @@
 }
 
 .outline_tree_elements {
+	padding-top: .5em;
 	padding-left: 1em;
+	background-color: white;
 }
 
-.outline_tree_elements li {
+.outline_element {
 	list-style-image:none;
 	list-style-position:outside;
 	list-style-type:none;
@@ -123,14 +125,15 @@
 	background-color: gray;
 }
 
-/*.outline_element .count a {
+.outline_element .count a {
 	background-color: gray;
 	color: white;
 	padding-left: 5px;
 	padding-right: 5px;
 	padding-bottom: 2px;
 	padding-top: 2px;
-}*/
+	text-decoration: none;
+}
 
 .outline_element .outline_right_controls {
 	display: none;
@@ -140,10 +143,11 @@
 	display: inherit;
 }
 
-/*.outline_tree_element_selected .count a {
+.outline_tree_element_selected .count a {
 	background-color: #eeeeee;
 	color: black;
-}*/
+	text-decoration: none;
+}
 
 .edit_exhibit_element_number {
 	background-color: #eeeeee;
@@ -158,7 +162,7 @@
 	color: black;
 	font-style: italic;
 	margin-right: 3px;
-	cursor: move;
+	/*cursor: move;*/
 }
 
 .exhibit_outline_header {
